--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
             run: npm run build
 
           - name: Deploy to GitHub Pages
-            run: npm run deploy
+            run: peaceiris/actions-gh-pages@v3
             env:
               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               publish_dir: dist
